# api/openapi_server/biz/mappers.py
@@ -1,11 +1,13 @@
-
 from ..models.task import Task
 from ..models.category import Category
+from ..models.player import Player
 
 from ..database import models
 
 
 def map_db_tasks_to_tasks(db_tasks: list[models.Task]) -> list[Task]:
+    if db_tasks is None:
+        return None
     return list(map(lambda x: map_db_task_to_task(x), db_tasks))
 
 def map_db_task_to_task(db_task: models.Task) -> Task:
@@ -29,4 +31,13 @@ def map_db_category_to_category(db_category: models.Category) -> Category:
         db_category.id,
         db_category.name,
         db_category.description
+    )
+
+def map_db_player_to_player(db_player: models.Player) -> Player:
+    return Player(
+        db_player.id,
+        db_player.discord_id,
+        db_player.score,
+        map_db_categories_to_categories(db_player.categories),
+        map_db_tasks_to_tasks(db_player.tasks)
     )
