# api/openapi_server/models/player.py
@@ -3,8 +3,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model import Model
+from openapi_server.models.category import Category
 from openapi_server import util
 
+from openapi_server.models.category import Category  # noqa: E501
 
 class Player(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -12,7 +14,7 @@ class Player(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id=None, discord_id=None, score=None):  # noqa: E501
+    def __init__(self, id=None, discord_id=None, score=None, categories=None, tasks=None):  # noqa: E501
         """Player - a model defined in OpenAPI
 
         :param id: The id of this Player.  # noqa: E501
@@ -21,22 +23,32 @@ class Player(Model):
         :type discord_id: str
         :param score: The score of this Player.  # noqa: E501
         :type score: int
+        :param categories: The categories of this Player.  # noqa: E501
+        :type categories: List[Category]
+        :param tasks: The tasks of this Player.  # noqa: E501
+        :type tasks: List[Category]
         """
         self.openapi_types = {
             'id': str,
             'discord_id': str,
-            'score': int
+            'score': int,
+            'categories': List[Category],
+            'tasks': List[Category]
         }
 
         self.attribute_map = {
             'id': 'id',
             'discord_id': 'discord_id',
-            'score': 'score'
+            'score': 'score',
+            'categories': 'categories',
+            'tasks': 'tasks'
         }
 
         self._id = id
         self._discord_id = discord_id
         self._score = score
+        self._categories = categories
+        self._tasks = tasks
 
     @classmethod
     def from_dict(cls, dikt) -> 'Player':
@@ -113,7 +125,51 @@ class Player(Model):
         :param score: The score of this Player.
         :type score: int
         """
-        if score is None:
-            raise ValueError("Invalid value for `score`, must not be `None`")  # noqa: E501
 
         self._score = score
+
+    @property
+    def categories(self) -> List[Category]:
+        """Gets the categories of this Player.
+
+
+        :return: The categories of this Player.
+        :rtype: List[Category]
+        """
+        return self._categories
+
+    @categories.setter
+    def categories(self, categories: List[Category]):
+        """Sets the categories of this Player.
+
+
+        :param categories: The categories of this Player.
+        :type categories: List[Category]
+        """
+        if categories is None:
+            raise ValueError("Invalid value for `categories`, must not be `None`")  # noqa: E501
+
+        self._categories = categories
+
+    @property
+    def tasks(self) -> List[Category]:
+        """Gets the tasks of this Player.
+
+
+        :return: The tasks of this Player.
+        :rtype: List[Category]
+        """
+        return self._tasks
+
+    @tasks.setter
+    def tasks(self, tasks: List[Category]):
+        """Sets the tasks of this Player.
+
+
+        :param tasks: The tasks of this Player.
+        :type tasks: List[Category]
+        """
+        if tasks is None:
+            raise ValueError("Invalid value for `tasks`, must not be `None`")  # noqa: E501
+
+        self._tasks = tasks
